# mortality

./: .gitignore  Justfile  README.md  pyproject.toml
examples/: run_experiment.py
examples/data/: autogen_emergent_sample.json
scripts/: run_emergent.py
src/mortality/: __init__.py  naming.py
src/mortality/agents/: __init__.py  action_gate.py  lifecycle.py  memory.py  profile.py  state.py
src/mortality/experiments/: __init__.py  autogen_emergent.py  base.py  emergent_timer.py  multi_timer.py  registry.py  respawn_diary.py  single_timer.py
src/mortality/llm/: __init__.py  anthropic.py  base.py  gemini.py  grok.py  mock.py  openai.py  openrouter.py  providers.py  utils.py
src/mortality/mcp/: __init__.py  bus.py  permissions.py
src/mortality/orchestration/: __init__.py  runtime.py
src/mortality/tasks/: __init__.py  timers.py
src/mortality/telemetry/: __init__.py  base.py  console.py  recorder.py  websocket.py
tests/: conftest.py  test_console_sink.py  test_e2e_experiments.py  test_mcp_bus.py  test_mcp_grants.py  test_timers.py
ui/observer/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json
ui/observer/public/samples/: demo-countdown-self.json  demo-staggered-deaths.json
ui/observer/src/: App.tsx  styles.css
ui/observer/src/components/: AgentCard.tsx  AgentDrawer.tsx  AgentModelBadge.tsx  AgentStatusPanel.tsx  BoardView.tsx  BundleLoader.tsx  ChatReplay.tsx  CountdownRing.tsx  DiaryPanel.tsx  EventFilters.tsx  EventStream.tsx  InteractionFeed.tsx  LifeFeed.tsx  LiveDiaryPanel.tsx  LiveEventFeed.tsx  (+7 more)
(+8 files in other folders)
